--- a/Horseshoe.NET.Mvc/Views/Shared/_Bootstrap4Alert.cshtml
+++ b/Horseshoe.NET.Mvc/Views/Shared/_Bootstrap4Alert.cshtml
@@ -14,7 +14,7 @@
     @{
         if (Model.Closeable)
         {
-            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <button type="button" class="close" data-dismiss="alert" aria-label="close">&times;</button>
         }
 
         if (Model.Emphasis != null)
@@ -22,7 +22,7 @@
             <strong>@Model.Emphasis</strong>@Html.Raw(" - ")
         }
 
-        var message = TextUtil.Reveal(TextUtil.Zap(Model.Message), nullOrBlank: true);
+        var message = TextUtil.RevealNullOrBlank(TextUtil.Zap(Model.Message));
         if (Model.MessageEncodeHtml)
         {
             message = HttpUtility.HtmlEncode(message);
@@ -37,7 +37,13 @@
             bool htmlEncoded = false;
             var messageDetails = Model.MessageDetails;
 
-            if ((Model.MessageDetailsRendering & AlertMessageDetailsRenderingPolicy.KeepHidden) != AlertMessageDetailsRenderingPolicy.KeepHidden)
+            if ((Model.MessageDetailsRendering & AlertMessageDetailsRenderingPolicy.Hidden) == AlertMessageDetailsRenderingPolicy.Hidden)
+            {
+                <div style="display:none;">
+                    @Html.Raw(messageDetails)
+                </div>
+            }
+            else
             {
                 usePre = (Model.MessageDetailsRendering & AlertMessageDetailsRenderingPolicy.PreFormatted) == AlertMessageDetailsRenderingPolicy.PreFormatted;
                 htmlEncoded = (Model.MessageDetailsRendering & AlertMessageDetailsRenderingPolicy.HtmlEncoded) == AlertMessageDetailsRenderingPolicy.HtmlEncoded;
@@ -52,28 +58,38 @@
                 }
 
                 <script type="text/javascript">
-                    function ShowBootstrapAlertMessageDetails(clickedLink, alertDetailsElementID) {
+                    function ToggleAlertDetails(clickedLink, alertDetailsElementID) {
                         if (window.jQuery) {
-                            $('#' + alertDetailsElementID).show();
-                            $(clickedLink).hide();
+                            var $clickedLink = $(clickedLink);
+                            if ($clickedLink.prop("toggled")) {
+                                $("#" + alertDetailsElementID).hide();
+                                $clickedLink.text("show details");
+                                $clickedLink.prop("toggled", false);
+                            }
+                            else {
+                                $("#" + alertDetailsElementID).show();
+                                $clickedLink.text("hide details");
+                                $clickedLink.prop("toggled", true);
+                            }
                         }
                         else {
-                            var alertDetailsElement = document.getElementById(alertDetailsElementID);
-                            alertDetailsElement.style.display = 'block';
-                            clickedLink.style.display = 'none';
+                            if (clickedLink.toggled) {
+                                document.getElementById(alertDetailsElementID).style.display = "none";
+                                clickedLink.innerText = "show details";
+                                clickedLink.toggled = false;
+                            }
+                            else {
+                                document.getElementById(alertDetailsElementID).style.display = "block";
+                                clickedLink.innerText = "hide details";
+                                clickedLink.toggled = true;
+                            }
                         }
                     }
                 </script>
                 <div>
-                    <a href="javascript:;" onclick="ShowBootstrapAlertMessageDetails(this, '@alertDetailsElementID')">show details</a>
+                    <a href="javascript:;" onclick="ToggleAlertDetails(this, '@alertDetailsElementID')">show details</a>
                 </div>
-                <div id="@alertDetailsElementID" style="display:none;font-family:Consolas,monospace;font-size:.8em;@(usePre ? "white-space:pre;" : ""))">
-                    @Html.Raw(messageDetails)
-                </div>
-            }
-            else
-            {
-                <div style="display:none;">
+                <div id="@alertDetailsElementID" style="display:none;@(usePre ? "font-family:Consolas,monospace;font-size:.8em;white-space:pre;" : ""))">
                     @Html.Raw(messageDetails)
                 </div>
             }
@@ -81,4 +97,3 @@
     }
 
 </div>
-
