--- a/TestMVC/Views/Utilities/Index.cshtml
+++ b/TestMVC/Views/Utilities/Index.cshtml
@@ -5,7 +5,7 @@
 @using Horseshoe.NET.Application
 @using Horseshoe.NET
 @using Horseshoe.NET.Text
-@using Horseshoe.NET.Web
+@using Horseshoe.NET.Mvc
 
 @model UtilityIndexViewModel
 
@@ -66,7 +66,7 @@
     </tr>
     <tr>
         <th>App Type - Message Tracker</th>
-        <td>@Html.Raw(TextUtil.Reveal(Model.AppTypeMessageTrackerHTML, nullOrBlank: true))</td>
+        <td>@Html.Raw(TextUtil.RevealNullOrBlank(Model.AppTypeMessageTrackerHTML))</td>
     </tr>
     <tr>
         <th colspan="2" class="section-header">Console Properties</th>
@@ -80,7 +80,7 @@
                 <td>
                     @try
                     {
-                        @TextUtil.Reveal(prop.GetValue(null), nullOrBlank: true)
+                        @TextUtil.RevealNullOrBlank(prop.GetValue(null))
                     }
                     catch (Exception ex)
                     {
@@ -106,7 +106,7 @@
                     {
                         if (prop.Name.Equals("NewLine"))
                         {
-                            @TextUtil.Reveal(prop.GetValue(null), crlf: true)
+                            @TextUtil.RevealWhiteSpace(prop.GetValue(null))
                         }
                         else if (prop.Name.Equals("StackTrace"))
                         {
@@ -114,7 +114,7 @@
                         }
                         else
                         {
-                            @TextUtil.Reveal(prop.GetValue(null), nullOrBlank: true)
+                            @TextUtil.RevealNullOrBlank(prop.GetValue(null))
                         }
                     }
                     catch (Exception ex)
@@ -139,7 +139,7 @@
                 <td>
                     @try
                     {
-                        @TextUtil.Reveal(prop.GetValue(AppDomain.CurrentDomain), nullOrBlank: true)
+                        @TextUtil.RevealNullOrBlank(prop.GetValue(AppDomain.CurrentDomain))
                     }
                     catch (Exception ex)
                     {
@@ -159,7 +159,7 @@
         <td>
             @try
             {
-                @TextUtil.Reveal(Process.GetCurrentProcess().MainWindowHandle, nullOrBlank: true)
+                @TextUtil.RevealNullOrBlank(Process.GetCurrentProcess().MainWindowHandle)
             }
             catch (Exception ex)
             {
