--- a/TestMVC/Views/Web/Index.cshtml
+++ b/TestMVC/Views/Web/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TestMVC.ViewModels
+@using Horseshoe.NET.Bootstrap
 
 @model WebIndexViewModel
 
@@ -28,6 +29,25 @@
             }
     </style>
 }
+
+<div style="float: left">
+    @Html.ActionLink("Info alert", "DisplayInfoAlert")
+    <br />
+    @Html.ActionLink("Info alert (HTML) w/details", "DisplayInfoHtmlAlert")
+    <br />
+    @Html.ActionLink("Info alert (HTML encoded) w/details", "DisplayInfoHtmlEncodedAlert")
+    <br />
+    @Html.ActionLink("Error alert - closeable", "DisplayCloseableErrorAlert")
+</div>
+
+<div id="alert-area" style="float: left; padding: 20px; border: 2px solid black; margin-left: 30px; width: 700px;">
+    @if (ViewBag.BootstrapAlert != null)
+    {
+        Html.RenderPartial("_Bootstrap3Alert", (Bootstrap3.Alert)ViewBag.BootstrapAlert);
+    }
+</div>
+
+<div style="clear:both"></div>
 
 <table class="test-table">
     <tr>
