--- a/TestWebForms/Site.Master
+++ b/TestWebForms/Site.Master
@@ -53,7 +53,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/Utilities">Utilities</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
+                        <li><a runat="server" href="~/Web">Web</a></li>
                     </ul>
                 </div>
             </div>
