--- a/Horseshoe.NET.Mvc (Core 3.0)/Views/Shared/_Bootstrap4Alert.cshtml
+++ b/Horseshoe.NET.Mvc (Core 3.0)/Views/Shared/_Bootstrap4Alert.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Horseshoe.NET.Bootstrap
 @using Horseshoe.NET.Text
 
-@model Bootstrap3.Alert
+@model Bootstrap4.Alert
 
 @{
-    <div class="alert @(Model.AlertType.ToCssClass() + (Model.Closeable ? " alert-dismissible" : ""))">
+    <div class="alert @(Model.AlertType.ToCssClass() + (Model.Closeable ? " alert-dismissible" : "") + (Model.Fade ? " fade" : "") + (Model.Show ? " show" : ""))">
         @{
             if (Model.Closeable)
             {
