--- a/TestMVC (Core31)/Views/_ViewImports.cshtml
+++ b/TestMVC (Core31)/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using TestMVC.Models
 @using TestMVC.ViewModels
 @using Horseshoe.NET
+@using Horseshoe.NET.Bootstrap
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
