--- a/Horseshoe.NET.Mvc (Core 3.0)/Views/Shared/_Bootstrap3Alert.cshtml
+++ b/Horseshoe.NET.Mvc (Core 3.0)/Views/Shared/_Bootstrap3Alert.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Horseshoe.NET.Bootstrap
 @using Horseshoe.NET.Bootstrap.Extensions
+@using Horseshoe.NET.Objects.Clean
 @using Horseshoe.NET.Text
 
 @model Bootstrap3.Alert
@@ -17,7 +18,7 @@
                 <strong>@Model.Emphasis</strong>@(" - ")
             }
 
-            var message = TextUtil.RevealNullOrBlank(Horseshoe.NET.ObjectClean.Methods.ZapString(Model.Message));
+            var message = TextUtil.RevealNullOrBlank(Zap.String(Model.Message));
             if (Model.EncodeHtml)
             {
                 @message
@@ -52,9 +53,9 @@
                         {
                             @Html.Raw(Model.MessageDetails)
                         }
-                </div>
+                    </div>
+                }
             }
-        }
         }
     </div>
 }
