--- a/Horseshoe.NET.Mvc (Core 3.0)/Views/Shared/_Bootstrap4Alert.cshtml
+++ b/Horseshoe.NET.Mvc (Core 3.0)/Views/Shared/_Bootstrap4Alert.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Horseshoe.NET.Bootstrap
 @using Horseshoe.NET.Bootstrap.Extensions
+@using Horseshoe.NET.Objects.Clean
 @using Horseshoe.NET.Text
 
 @model Bootstrap4.Alert
@@ -17,7 +18,7 @@
                 <strong>@Model.Emphasis</strong>@(" - ")
             }
 
-            var message = TextUtil.RevealNullOrBlank(Horseshoe.NET.ObjectClean.Methods.ZapString(Model.Message));
+            var message = TextUtil.RevealNullOrBlank(Zap.String(Model.Message));
             if (Model.EncodeHtml)
             {
                 @message
